test/samples/error/err_invalid_vector_index_expr.w
var x = [1,2,3,4,5]
x[2 > 1] = 1.0